--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js"
+    
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,8 @@
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.6"
+    "mongoose": "^6.3.6",
+    "passport": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
