--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 --detectOpenHandles --coverage",
     "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js"
-
   },
   "repository": {
     "type": "git",
@@ -31,6 +30,10 @@
     "passport": "^0.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "cross-env": "^7.0.3",
+    "jest": "^28.1.1",
+    "mongodb-memory-server": "^8.7.1",
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.3"
   }
 }
