--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -13,6 +13,6 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: 'skyscanner-backend' #Must be unique in Heroku
-          heroku_email: 'skyreadernuclio@gmail.com'
+          heroku_app_name: 'fakeflix-nucli' #Must be unique in Heroku
+          heroku_email: 'oreyes.s@outlook.com'
           usedocker: true
